# preprocessor

./: README  configure.ac
.github/workflows/: ccpp.yml
src/: Makefile.am
src/preprocessor/: is_begin_parens.h  is_empty.h  is_null.h  is_sequence.h  is_void_cast.h  remove_begin_parens.h  remove_parens.h  variadic_size_or_zero.h
tests/: test.c
