nobase_preprocessor_include_HEADERS = \
	preprocessor/is_begin_parens.h \
	preprocessor/is_empty.h \
	preprocessor/is_null.h \
	preprocessor/is_sequence.h \
	preprocessor/is_void_cast.h \
	preprocessor/remove_begin_parens.h \
	preprocessor/remove_parens.h \
	preprocessor/variadic_size_or_zero.h

preprocessor_includedir = $(includedir)
